--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2313,7 +2313,7 @@ p.car-class {
 #hoteldetailsmodal .container {
   width: initial;
 }
-#hoteldetailsmodal .container #menu1 h5{
+#hoteldetailsmodal .container #menu1 h5, #menu2 h5{
       font-weight: 600;
 }
 #imageModal .carousel-inner {
@@ -2328,4 +2328,41 @@ p.car-class {
 #imageModal .carousel-inner > .item > img {
     width: 100%;
     height: 500px;
+}
+#menu1 h5, #menu1 p {
+  margin-left: 50px;
+}
+#menu1 img {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    background: #f3f2f5;
+    top: 10px;
+    border-radius: 5px;
+}
+#home p {
+  padding: 5px;
+}
+#menu2 .badge {
+    position: absolute;
+    background: white;
+    color: #0b91d8;
+    width: 45px;
+    height: 45px;
+    border: 1px solid #0b91d8;
+    padding: 10px;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 50%;
+}
+
+#menu2 h5, #menu2 p {
+  margin-left: 65px;
+}
+#menu2 div {
+  margin-top: 10px;
+}
+#menu1 div > div {
+  margin-top: 10px;
 }
