--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2047,6 +2047,9 @@ p.car-class {
 .timeline-badge.flight {
     background-color: #04c9a6 !important;
 }
+.timeline-badge.hotel {
+    background-color: #0b91d8 !important;
+}
 
 .timeline-badge.danger {
     background-color: #d9534f !important;
@@ -2250,13 +2253,21 @@ p.car-class {
 .image-gallery {
   width: 250px;
 }
+#hotel-booking .image-gallery {
+  width: 100%;
+}
+#hotel-booking .image-gallery li img {
+  width: 100px;
+  height: 100px;
+  margin-left: 2px;
+}
 .image-gallery li  img {
   float: left;
   width: 50px;
   height: 50px;
   padding: 1px;
 }
-.image-gallery li:first-child img{
+.image-gallery li:first-child img, #hotel-booking .image-gallery li:first-child img {
   width: 200px;
   height: 200px;
   float: left;
@@ -2302,13 +2313,16 @@ p.car-class {
 #hoteldetailsmodal .nav {
   margin-top: 5px;
 }
+#hotel-booking .nav li a,
 #hoteldetailsmodal .nav li a{
   border: none;
 }
+#hotel-booking .nav li a:hover,
 #hoteldetailsmodal .nav li a:hover{
   background: white;
   color: #0b91d8;
 }
+#hotel-booking .nav li.active a,
 #hoteldetailsmodal .nav li.active a {
   background: white;
   color: #0b91d8;
@@ -2331,7 +2345,7 @@ p.car-class {
 }
 #imageModal .carousel-inner > .item > img {
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
 #menu1 h5, #menu1 p {
   margin-left: 50px;
@@ -2394,4 +2408,16 @@ p.car-class {
   color: black;
   background: white;
   border-bottom: 2px solid #e47225;
+}
+#hotel-booking .panel-body {
+  padding: 10px 0;
+}
+#hotel-booking .panel-body ul{
+  margin-bottom: 10px;
+}
+#hotel-booking .listing-details{
+  padding-left: 10px;
+}
+#hotel-booking .listing-details p{
+  font-size: 18px;
 }
